# get_container_ip

./: .gitignore  README.md  pyproject.toml  setup.py  sonar-project.properties
.github/workflows/: publish.yml
get_container_ip/: __init__.py
