[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'get_container_ip'
dependencies = [
    "argparse>=1.4.0",
    "logging>=0.4.9.6"
]
requires-python = ">=3.6"
authors = [
    {name = "Koent S.r.l.", email = "tools@koent.it"},
]
maintainers = [
    {name = "Koent S.r.l.", email = "tools@koent.it"},
]
description = "A package to obtain the IP address of a running docker container."
readme = {file = "README.txt", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICEN[CS]E.*",]
keywords = ["docker", "ip", "container", "network", "address", "utility", "tool", "automation", "ip address"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]


[project.urls]
Homepage = "https://github.com/Koent-it/get_container_ip"
Documentation = "https://github.com/Koent-it/get_container_ip"
Repository = "https://github.com/Koent-it/get_container_ip"
Issues = "https://github.com/Koent-it/get_container_ip/issues"
Changelog = "https://github.com/Koent-it/get_container_ip"

[project.scripts]
get_container_ip = "get_container_ip.cli:app"

[project.entry-points."pipx.run"]
get_container_ip = "get_container_ip.cli:app"

[tool.setuptools.dynamic]
version = {attr = "get_container_ip.__version__"}
